--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="'background">
+    <main class="background">
         <section class="title">
             <h1> Tic Tac Toe </h1>
         </section>
         <section class="display">
-            Player <span class="display-player playerX">X</span>'s turn
+            Player <span class="displgiay-player playerX">X</span>'s turn
         </section>
         <section class="container">
             <div class="title"></div>
